--- a/test.mdx
+++ b/test.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Test'
+description: 'Das ist ein schneller Test'
 ---
 
 ## Setup your development
